added login sysytem for adminstration, add progress bar, made some changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-
+<mat-progress-bar mode="indeterminate" *ngIf="statusService.progressBarStatus"></mat-progress-bar>
 <app-toolbar></app-toolbar>
-<app-side></app-side>
+<app-side *ngIf="statusService.checkStatus === true"></app-side>
+<router-outlet *ngIf="statusService.checkStatus === false"></router-outlet>
