--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,13 +1,13 @@
 <div fxLayout="row" fxLayoutAlign="space-between center" style="padding: 10px;">
 
   <div fxLayout="row" fxLayoutAlign="space-evenly center">
-    <img src="https://img.icons8.com/color/48/000000/test-account.png" style="border-radius: 50%;width: 20px;height: 20px;cursor: pointer;"/>
-    <div style="margin-left: 10px;margin-right: 10px;cursor: pointer;">Adam Reuben</div>
+    <img src="imageUrlFromGoogleAccount" style="border-radius: 50%;width: 20px;height: 20px;cursor: pointer;"/>
+    <div style="margin-left: 10px;margin-right: 10px;cursor: pointer;">{{nameFromGoogleAccount}}</div>
   </div>
 
   <div>
-    <button mat-raised-button style="margin-right: 10px;">Login With Google</button>
-    <button mat-flat-button>Sign Out</button>
+    <button mat-raised-button style="margin-right: 10px;" routerLink="/admin-login" *ngIf="hideButton === false">Login With Google</button>
+    <button mat-flat-button (click)="logOut()" *ngIf="hideButton === true">Sign Out</button>
   </div>
 
 </div>
