nime design balance and payment layouts

--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -1,1 +1,33 @@
-<p>balance works!</p>
+
+<mat-card style="margin-bottom: 10px;">
+  <div fxLayout="row" fxLayoutAlign="space-between center">
+    <div>Our Balance</div>
+    <div>{{"TSH 45,000,000/="}}</div>
+
+  </div>
+</mat-card>
+
+
+<mat-card style="margin-bottom: 10px;">
+
+  <div fxLayout="row" fxLayoutAlign="space-between center">
+    <div>Funds Iliyo Kopeshwa</div>
+    <div>{{"TSH 3,000,000/="}}</div>
+
+  </div>
+</mat-card>
+
+
+
+<mat-card style="margin-bottom: 10px;">
+
+
+  <div fxLayout="row" fxLayoutAlign="space-between center">
+    <div>Total Fund In Hold</div>
+    <div>{{"TSH 2,000,000/="}}</div>
+
+  </div>
+</mat-card>
+
+
+
