--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,1 +1,6 @@
-<p>payment works!</p>
+<mat-tab-group>
+  <mat-tab label="Succeeded"> This will Show all Succeeded Payment </mat-tab>
+  <mat-tab label="Refunded"> Will Show all Refunded Payments </mat-tab>
+  <mat-tab label="UnCaptured"> Will Show all Uncaptured Payments </mat-tab>
+  <mat-tab label="All"> Will Show All Payments</mat-tab>
+</mat-tab-group>
