--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -8,10 +8,10 @@
   <div class="searchBoxContainer">
 <input matInput type="search" [(ngModel)]="value">
 <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-  <mat-icon>close</mat-icon>
+  <!-- <mat-icon>close</mat-icon> -->
 </button>
 
-  <div>
+</div>
     
   
 
