--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -2,10 +2,26 @@
     width: 35vw;
     border: none;
     background-color: white;
-    text-indent: 20px;
+    margin-top: 5px;
+    text-indent: 10px;
     height: 25px;
     color: grey;
+    float: left;
+    outline: none;
+    
+}
+
+[closeIcon]{
+    color: grey;
+    float: left;
+    position: relative;
+    margin: 8px;
+}
+
+.searchBox{
+    background-color: white;
     border-radius: 5px;
+    padding: 3px;
     -webkit-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
