--- a/src/app/connected-account/connected-account.component.html
+++ b/src/app/connected-account/connected-account.component.html
@@ -2,13 +2,17 @@
 <div>
   <mat-list role="list">
 
-    <mat-list-item role="listitem" style="margin-bottom: 40px;">
+    <mat-list-item role="listitem" style="margin-bottom: 40px;" *ngFor="let customerDetails of customerObjectFromFirebase">
       <mat-card style="background-color: whitesmoke;width: 100%;">
         <div fxLayout="row" fxLayoutAlign="space-between center">
-
-            <img src="https://photo-cdn.icons8.com/assets/previews/729/35b9365a-7fe4-459c-ac3e-5623c8574bd7.jpg" style="border-radius: 50%;width: 50px;height: 50px;cursor: pointer;"/>
-
-          <button mat-stroked-button>Registered</button>
+          <div fxLayout="row">
+            <img src={{customerDetails.payload.doc.data().customerImgFile}} style="border-radius: 50%;width: 50px;height: 50px;">
+            <div fxLayout="column" fxLayoutAlign="space-around start" style="margin-left: 10px;">
+              <div>{{customerDetails.payload.doc.data().name}}</div>
+              <div style="font-weight: 100;font-size: small;">{{"Added By "+customerDetails.payload.doc.data().adminName}}</div>
+            </div>
+          </div>
+          <button mat-raised-button (click)="activateUser()">Activate</button>
         </div>
       </mat-card>
     </mat-list-item>
