--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -26,3 +26,15 @@
     -moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
 }
+[userImage]{
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+}
+[userName]{
+    /* font-weight: bold; */
+    margin-left: 10px;
+    font-size: 1.2vw;
+    margin-right: 10px;
+    cursor: pointer;
+}
