--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
 <div fxLayout="row" fxLayoutAlign="space-between center" style="padding: 10px;">
 
   <div fxLayout="row" fxLayoutAlign="space-evenly center">
-    <img src={{imageUrlFromGoogleAccount}} style="border-radius: 50%;width: 20px;height: 20px;">
-    <div style="margin-left: 10px;margin-right: 10px;cursor: pointer;">{{nameFromGoogleAccount}}</div>
+    <img userImage src={{imageUrlFromGoogleAccount}}>
+    <div userName>{{nameFromGoogleAccount}}</div>
   </div>
 
   <div class="searchBox">
@@ -16,10 +16,6 @@
 </div>
     
   
-
-
-
-
   <div>
     <button mat-raised-button style="margin-right: 10px;" routerLink="/admin-login" *ngIf="hideButton === false">Login With Google</button>
     <button mat-flat-button (click)="logOut()" *ngIf="hideButton === true">Sign Out</button>
