--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -15,8 +15,8 @@
             </div>
 
           </div>
+          <button mat-flat-button color="primary">Completed</button>
 
-          <button mat-stroked-button>Complete</button>
         </div>
       </mat-card>
     </mat-list-item>
