--- a/src/app/connected-account/connected-account.component.html
+++ b/src/app/connected-account/connected-account.component.html
@@ -12,7 +12,7 @@
               <div style="font-weight: 100;font-size: small;">{{"Added By "+customerDetails.payload.doc.data().adminName}}</div>
             </div>
           </div>
-          <button mat-raised-button (click)="activateUser()" color="warn">{{buttonStatusValue === "Activated"? "Connected":"Activate"}}</button>
+          <button mat-raised-button color="warn">{{buttonStatusValue === "Activated"? "Connected":"Activate"}}</button>
         </div>
       </mat-card>
     </mat-list-item>
