--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -9,7 +9,7 @@
   
       <mat-icon closeIcon>search</mat-icon>
   
-    <input matInput type="text" [(ngModel)]="value" placeholder="Search Here" class="searchBoxContainer">
+    <input matInput type="text" [(ngModel)]="value" placeholder="Search..." class="searchBoxContainer">
 </div>
     
   
