--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -3,7 +3,7 @@
     border: none;
     background-color: white;
     text-indent: 10px;
-    height: 25px;
+    margin-top: 2px;
     color: grey;
     float: left;
     outline: none;
@@ -14,6 +14,8 @@
     color: grey;
     float: left;
     position: relative;
+    height: 20px;
+    font-size: 20px;
 
 }
 
@@ -21,9 +23,9 @@
     background-color: white;
     border-radius: 5px;
     padding: 3px;
-    -webkit-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.75);
 }
 [userImage]{
     height: 40px;
