--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -5,7 +5,7 @@
   <div fxFlex='20'>
 
     <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;"  (click)="changeLayoutDesign('home')"  >
-      <mat-icon>house</mat-icon>
+      <mat-icon>home</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Home</div>
     </div>
 
