--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('balance')">
-      <mat-icon>style</mat-icon>
+      <mat-icon>account_balance_wallet</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Balance</div>
     </div>
 
@@ -25,7 +25,8 @@
     </div>
 
     <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('connected_account')">
-      <mat-icon>done_all</mat-icon>
+      <!-- <mat-icon>done_all</mat-icon> -->
+      <mat-icon>verified_user</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Connected Accounts</div>
     </div>
 
