changed side nav

--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -4,38 +4,38 @@
 
   <div fxFlex='20'>
 
-    <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;"  (click)="changeLayoutDesign('home')"  >
+    <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('home')"  >
       <mat-icon>home</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Home</div>
     </div>
 
-    <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('payment')">
+    <div dashOpt fxLayout="row" (click)="changeLayoutDesign('payment')">
       <mat-icon>attach_money</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Payments</div>
     </div>
 
-    <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('balance')">
+    <div dashOpt fxLayout="row" (click)="changeLayoutDesign('balance')">
       <mat-icon>account_balance_wallet</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Balance</div>
     </div>
 
-    <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('customer')">
+    <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('customer')">
       <mat-icon>people_alt</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Customers</div>
     </div>
 
-    <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('connected_account')">
+    <div dashOpt fxLayout="row" (click)="changeLayoutDesign('connected_account')">
       <!-- <mat-icon>done_all</mat-icon> -->
       <mat-icon>verified_user</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Connected Accounts</div>
     </div>
 
-    <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('reports')">
+    <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('reports')">
       <mat-icon>bar_chart</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Reports</div>
     </div>
 
-    <div fxLayout="row" style="padding-bottom: 10px;cursor: pointer;" (click)="changeLayoutDesign('setting')">
+    <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('setting')">
       <mat-icon>settings</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Settings</div>
     </div>
