--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" style="padding: 10px;">
+<div toolBar fxLayout="row" fxLayoutAlign="space-between center" style="padding: 10px;">
 
   <div fxLayout="row" fxLayoutAlign="space-evenly center">
     <img userImage src={{imageUrlFromGoogleAccount}}>
