--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="searchBox">
-    <mat-icon closeIcon>search</mat-icon>
+    <mat-icon matPrefix>search</mat-icon>
     <input matInput type="text" [(ngModel)]="value" placeholder="Search..." class="searchBoxContainer">
 </div>
 
