--- a/src/app/payment/all-payment/all-payment.component.html
+++ b/src/app/payment/all-payment/all-payment.component.html
@@ -7,7 +7,7 @@
       </mat-panel-title>
 
       <mat-panel-description>
-        {{"Loan was Taken: "+customerDetails.payload.doc.data().birth}}
+        {{"Loan was Taken "+customerDetails.payload.doc.data().birth.toDate()}}
       </mat-panel-description>
 
     </mat-expansion-panel-header>
