--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -10,9 +10,26 @@
     </div>
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('payment')">
-      <mat-icon>attach_money</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Payments</div>
+      <!-- <mat-icon>attach_money</mat-icon>
+      <div style="margin-top:3px;margin-left: 3px;">Payments</div> -->
+
+<mat-icon style="margin-top: 10px;">
+  attach_money
+</mat-icon>
+      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+        <!-- This is the tree node template for expandable nodes -->
+        
+        <mat-tree-node matTreeNodeToggle *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
+          {{node.name}}
+        </mat-tree-node>
+      </mat-tree>
     </div>
+
+
+
+
+
+
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('balance')">
       <mat-icon>account_balance_wallet</mat-icon>
