--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -11,11 +11,8 @@
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('payment')">
       <mat-icon style="margin-top: 10px;">attach_money</mat-icon>
-      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-        <mat-tree-node matTreeNodeToggle *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
-          {{node.name}}
-        </mat-tree-node>
-      </mat-tree>
+      <div style="margin-top:3px;margin-left: 3px;">Payments</div>
+
     </div>
 
 
