changed font family from roboto to ubuntu

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div style="text-align: center;">
   <div *ngIf="!(afAuths.authState | async)" style="padding-top: 200px;">
-    <h1>Welcom To BICB Admin</h1>
+    <h1>Welcome To BICB Admin</h1>
 
     <button mat-raised-button appGoogelSign> Login with Google</button>
 
