--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -10,16 +10,10 @@
     </div>
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('payment')">
-      <mat-icon style="margin-top: 10px;">attach_money</mat-icon>
+      <mat-icon>attach_money</mat-icon>
       <div style="margin-top:3px;margin-left: 3px;">Payments</div>
 
     </div>
-
-
-
-
-
-
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('balance')">
       <mat-icon>account_balance_wallet</mat-icon>
