--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -4,41 +4,41 @@
 
   <div sideNav>
 
+
     <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('home')"  >
       <mat-icon>home</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Home</div>
+      <div class="opts">Home</div>
     </div>
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('payment')">
       <mat-icon>attach_money</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Payments</div>
+      <div class="opts">Payments</div>
 
     </div>
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('balance')">
       <mat-icon>account_balance_wallet</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Balance</div>
+      <div class="opts">Balance</div>
     </div>
 
     <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('customer')">
-      <mat-icon>people_alt</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Customers</div>
+      <mat-icon>account_circle</mat-icon>
+      <div class="opts">Customers</div>
     </div>
 
     <div dashOpt fxLayout="row" (click)="changeLayoutDesign('connected_account')">
-      <!-- <mat-icon>done_all</mat-icon> -->
       <mat-icon>verified_user</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Connected Accounts</div>
+      <div class="opts">Connected Accounts</div>
     </div>
 
     <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('reports')">
       <mat-icon>bar_chart</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Reports</div>
+      <div class="opts">Reports</div> 
     </div>
 
     <div dashOpt fxLayout="row"  (click)="changeLayoutDesign('setting')">
       <mat-icon>settings</mat-icon>
-      <div style="margin-top:3px;margin-left: 3px;">Settings</div>
+      <div class="opts">Settings</div>
     </div>
   </div>
 
