fix click error in customer details

--- a/src/app/customer/customer-portfolio/customer-portfolio.component.html
+++ b/src/app/customer/customer-portfolio/customer-portfolio.component.html
@@ -1,1 +1,11 @@
-<p>customer-portfolio works!</p>
+
+<div fxLayout="column" fxLayoutAlign="space-between center">
+
+  <div fxLayout="column" fxLayoutAlign="space-between center" >
+    <img src={{allDataService.customerData.customerImgFile}} style="border-radius: 50%;width: 80px;height: 80px;">
+    <div style="font-size: medium;">{{allDataService.customerData.name}}</div>
+  </div>
+
+
+  <div>Privacy design</div>
+</div>
